// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sett Deposit can go back from full fees descriptions  1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-4"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-19"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-7 MuiDialog-scrollPaper-5"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-21 MuiDialog-paper-8 MuiDialog-paperScrollPaper-9 MuiDialog-paperWidthSm-13 MuiDialog-paperFullWidth-17 MuiPaper-elevation24-48 MuiPaper-rounded-22"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-356 makeStyles-root-352"
        >
          <h2
            class="MuiTypography-root-54 MuiTypography-h6-64"
          >
            <div
              class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-align-items-xs-center-93"
            >
              <div
                class="MuiGrid-root-84 makeStyles-logoContainer-355 MuiGrid-item-86"
              >
                <img
                  alt="Badger Curve.fi renBTC/wBTC/sBTC Vault Symbol"
                  class="makeStyles-settLogo-354"
                  src="/assets/icons/sbtccrv.png"
                />
              </div>
              <div
                class="MuiGrid-root-84 MuiGrid-item-86"
              >
                <p
                  class="MuiTypography-root-54 makeStyles-mode-353 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-54 MuiTypography-body1-56 MuiTypography-colorTextPrimary-79"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-357 makeStyles-content-1 MuiDialogContent-dividers-358"
        >
          <div
            class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-align-items-xs-center-93"
          >
            <div
              class="MuiGrid-root-84 MuiGrid-item-86 MuiGrid-grid-xs-12-130 MuiGrid-grid-sm-6-138"
            >
              <p
                class="MuiTypography-root-54 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80"
              >
                Available: 0.000000000000000000
              </p>
            </div>
            <div
              class="MuiGrid-root-84 WithStyles(ForwardRef(Grid))-root-359 WithStyles(ForwardRef(Grid))-root-360 MuiGrid-item-86 MuiGrid-grid-xs-12-130 MuiGrid-grid-sm-6-138"
            >
              <div
                class="MuiButtonGroup-root-361"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-367 MuiButtonGroup-groupedHorizontal-368 MuiButtonGroup-groupedOutlined-375 MuiButtonGroup-groupedOutlinedHorizontal-376 MuiButtonGroup-groupedOutlined-375 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-448"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-367 MuiButtonGroup-groupedHorizontal-368 MuiButtonGroup-groupedOutlined-375 MuiButtonGroup-groupedOutlinedHorizontal-376 MuiButtonGroup-groupedOutlined-375 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-448"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-367 MuiButtonGroup-groupedHorizontal-368 MuiButtonGroup-groupedOutlined-375 MuiButtonGroup-groupedOutlinedHorizontal-376 MuiButtonGroup-groupedOutlined-375 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-448"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-367 MuiButtonGroup-groupedHorizontal-368 MuiButtonGroup-groupedOutlined-375 MuiButtonGroup-groupedOutlinedHorizontal-376 MuiButtonGroup-groupedOutlined-375 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-448"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-388 MuiTextField-root-387 WithStyles(ForwardRef(TextField))-root-385 WithStyles(ForwardRef(TextField))-root-386 MuiFormControl-fullWidth-391"
          >
            <div
              class="MuiInputBase-root-407 MuiOutlinedInput-root-392 MuiInputBase-fullWidth-417 MuiInputBase-formControl-408"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-418 MuiOutlinedInput-input-402"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-425 MuiOutlinedInput-notchedOutline-401"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-426"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-431"
            >
              <p
                class="MuiTypography-root-54 MuiTypography-body1-56"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-307 makeStyles-helpIcon-433 MuiSvgIcon-colorPrimary-308"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-316 makeStyles-divider-430"
            />
            <div
              class="MuiGrid-root-84 MuiGrid-container-85"
            >
              <div
                class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-justify-xs-space-between-104"
              >
                <p
                  class="MuiTypography-root-54 makeStyles-specName-445 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80 MuiTypography-displayInline-82"
                >
                  DAO Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-54 MuiTypography-subtitle2-66 MuiTypography-displayInline-82"
                >
                  10%
                </h6>
              </div>
              <div
                class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-justify-xs-space-between-104"
              >
                <p
                  class="MuiTypography-root-54 makeStyles-specName-445 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80 MuiTypography-displayInline-82"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-54 MuiTypography-subtitle2-66 MuiTypography-displayInline-82"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-contained-223 WithStyles(ForwardRef(Button))-root-446 WithStyles(ForwardRef(Button))-root-447 MuiButton-containedPrimary-224 MuiButton-containedSizeLarge-235 MuiButton-sizeLarge-237 MuiButton-disabled-228 MuiButton-fullWidth-238 MuiButtonBase-disabled-245"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-216"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Sett Deposit can see full fees descriptions  1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-4"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-19"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-7 MuiDialog-scrollPaper-5"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-21 MuiDialog-paper-8 MuiDialog-paperScrollPaper-9 MuiDialog-paperWidthSm-13 MuiDialog-paperFullWidth-17 MuiPaper-elevation24-48 MuiPaper-rounded-22"
        role="dialog"
      >
        <div
          class="MuiGrid-root-84 makeStyles-root-336 MuiGrid-container-85"
        >
          <div
            class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-align-items-xs-center-93 MuiGrid-justify-xs-space-between-104"
          >
            <p
              class="MuiTypography-root-54 makeStyles-title-337 MuiTypography-body1-56 MuiTypography-displayInline-82"
            >
              Fee Information
            </p>
            <button
              class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-text-217 makeStyles-backButton-338 MuiButton-textPrimary-218"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-216"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-307 makeStyles-arrowIcon-341"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                  />
                </svg>
                Back
              </span>
              <span
                class="MuiTouchRipple-root-342"
              />
            </button>
          </div>
          <div
            class="makeStyles-content-339"
          >
            <p
              class="MuiTypography-root-54 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80"
            >
              Fees are charged on certain Sett Vaults, and are sent to the BadgerDAO treasury, or shared with the strategist who wrote the vault strategy.
            </p>
            <hr
              class="MuiDivider-root-316 makeStyles-divider-340"
            />
            <div>
              <p
                class="MuiTypography-root-54 MuiTypography-body2-55 MuiTypography-colorTextSecondary-80"
              >
                - Performance Fees are assessed on the profit that the strategy creates
              </p>
              <p
                class="MuiTypography-root-54 MuiTypography-body2-55 MuiTypography-colorTextSecondary-80"
              >
                - Management Fees are charged on the entire principal over the course of a year
              </p>
              <p
                class="MuiTypography-root-54 MuiTypography-body2-55 MuiTypography-colorTextSecondary-80"
              >
                - Both Performance and Management Fees are factored into all ROI calculations
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Sett Deposit displays sett information 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-4"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-19"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-7 MuiDialog-scrollPaper-5"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-21 MuiDialog-paper-8 MuiDialog-paperScrollPaper-9 MuiDialog-paperWidthSm-13 MuiDialog-paperFullWidth-17 MuiPaper-elevation24-48 MuiPaper-rounded-22"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-53 makeStyles-root-49"
        >
          <h2
            class="MuiTypography-root-54 MuiTypography-h6-64"
          >
            <div
              class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-align-items-xs-center-93"
            >
              <div
                class="MuiGrid-root-84 makeStyles-logoContainer-52 MuiGrid-item-86"
              >
                <img
                  alt="Badger Curve.fi renBTC/wBTC/sBTC Vault Symbol"
                  class="makeStyles-settLogo-51"
                  src="/assets/icons/sbtccrv.png"
                />
              </div>
              <div
                class="MuiGrid-root-84 MuiGrid-item-86"
              >
                <p
                  class="MuiTypography-root-54 makeStyles-mode-50 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-54 MuiTypography-body1-56 MuiTypography-colorTextPrimary-79"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-187 makeStyles-content-1 MuiDialogContent-dividers-188"
        >
          <div
            class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-align-items-xs-center-93"
          >
            <div
              class="MuiGrid-root-84 MuiGrid-item-86 MuiGrid-grid-xs-12-130 MuiGrid-grid-sm-6-138"
            >
              <p
                class="MuiTypography-root-54 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80"
              >
                Available: 0.000000000000000000
              </p>
            </div>
            <div
              class="MuiGrid-root-84 WithStyles(ForwardRef(Grid))-root-189 WithStyles(ForwardRef(Grid))-root-190 MuiGrid-item-86 MuiGrid-grid-xs-12-130 MuiGrid-grid-sm-6-138"
            >
              <div
                class="MuiButtonGroup-root-191"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-197 MuiButtonGroup-groupedHorizontal-198 MuiButtonGroup-groupedOutlined-205 MuiButtonGroup-groupedOutlinedHorizontal-206 MuiButtonGroup-groupedOutlined-205 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-326"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-197 MuiButtonGroup-groupedHorizontal-198 MuiButtonGroup-groupedOutlined-205 MuiButtonGroup-groupedOutlinedHorizontal-206 MuiButtonGroup-groupedOutlined-205 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-326"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-197 MuiButtonGroup-groupedHorizontal-198 MuiButtonGroup-groupedOutlined-205 MuiButtonGroup-groupedOutlinedHorizontal-206 MuiButtonGroup-groupedOutlined-205 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-326"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-outlined-220 MuiButtonGroup-grouped-197 MuiButtonGroup-groupedHorizontal-198 MuiButtonGroup-groupedOutlined-205 MuiButtonGroup-groupedOutlinedHorizontal-206 MuiButtonGroup-groupedOutlined-205 MuiButton-outlinedSizeSmall-232 MuiButton-sizeSmall-236"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-216"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-326"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-250 MuiTextField-root-249 WithStyles(ForwardRef(TextField))-root-247 WithStyles(ForwardRef(TextField))-root-248 MuiFormControl-fullWidth-253"
          >
            <div
              class="MuiInputBase-root-269 MuiOutlinedInput-root-254 MuiInputBase-fullWidth-279 MuiInputBase-formControl-270"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-280 MuiOutlinedInput-input-264"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-287 MuiOutlinedInput-notchedOutline-263"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-288"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-293"
            >
              <p
                class="MuiTypography-root-54 MuiTypography-body1-56"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-307 makeStyles-helpIcon-295 MuiSvgIcon-colorPrimary-308"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-316 makeStyles-divider-292"
            />
            <div
              class="MuiGrid-root-84 MuiGrid-container-85"
            >
              <div
                class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-justify-xs-space-between-104"
              >
                <p
                  class="MuiTypography-root-54 makeStyles-specName-323 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80 MuiTypography-displayInline-82"
                >
                  DAO Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-54 MuiTypography-subtitle2-66 MuiTypography-displayInline-82"
                >
                  10%
                </h6>
              </div>
              <div
                class="MuiGrid-root-84 MuiGrid-container-85 MuiGrid-justify-xs-space-between-104"
              >
                <p
                  class="MuiTypography-root-54 makeStyles-specName-323 MuiTypography-body1-56 MuiTypography-colorTextSecondary-80 MuiTypography-displayInline-82"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-54 MuiTypography-subtitle2-66 MuiTypography-displayInline-82"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-244 MuiButton-root-215 MuiButton-contained-223 WithStyles(ForwardRef(Button))-root-324 WithStyles(ForwardRef(Button))-root-325 MuiButton-containedPrimary-224 MuiButton-containedSizeLarge-235 MuiButton-sizeLarge-237 MuiButton-disabled-228 MuiButton-fullWidth-238 MuiButtonBase-disabled-245"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-216"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
